cabinets of curiosities

--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
     <div class="wrapper">
       <div class="hero-content">
         <div class="card">
-          <img src="./images/Daco_4071008 1.png" loading="lazy" alt="logo_loki">
-        <h1>¡Disponible ahora!</h1>    
-        <p>Ha llegado el momento de Loki. Una nueva serie original, transmitida exclusivamente en Disney+.</p> 
-        <button>Ir a Disney +</button> 
+          <img src="./images/Cabinet_of_curiosities_card_2.png" loading="lazy" alt="logo_cabinet-of-curiosities">
+          <!-- <h1>¡Disponible ahora!</h1>     -->
+          <div class="title-info-metadata-wrapper" data-uia="title-info-metadata-wrapper">
+            <span class="title-info-metadata-item item-year" data-uia="item-year">2022</span><span role="presentation" class="info-spacer"> | </span><span class="title-info-metadata-item item-maturity" data-uia="item-maturity"><span class="maturity-rating"><span class="screen-reader-text">Calificación por edades:</span><span class="maturity-number">18+ </span></span></span><span role="presentation" class="info-spacer"> | </span><span class="title-info-metadata-item item-runtime" data-uia="item-runtime"><span class="duration"><span class="test_dur_str">1 temporada</span></span></span><span role="presentation" class="info-spacer"> | </span><a class="title-info-metadata-item item-genre" href="https://www.netflix.com/es/browse/genre/83059" data-uia="item-genre">Terror</a>
+          </div>
+        <p>Las pesadillas más sobrecogedoras cobran vida en estos ocho cuentos de terror, escalofriantes y visualmente arrebatadores, seleccionados por Guillermo del Toro.</p> 
+        <a href="https://www.netflix.com/es/browse/genre/83059"><button>Ir a Netflix </button></a>
         </div>          
         <!-- <img src="./images/img.png" alt="loki.jpg"> -->
       </div>
